@@ -145,3 +145,4 @@ list, please point out.
 * Tim Hermans: A bug report.
 * Anthony M. Martinez: Helped SASL options support
 * ilusi0n.x: A bug report.
+* projekttabla: A suggestion.
